--- a/index.html
+++ b/index.html
@@ -91,6 +91,157 @@
 					</ul>
 				</div>
 			</div>
+
+			<div class="main-dashboard">
+				<div class="main-project-section">
+					<h1>Your Projects</h1>
+					<div class="projects-container">
+						<div class="project-card">
+							<h2>Super Cool Project</h2>
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+								eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							</p>
+							<div class="quick-controls">
+								<img src="assets/star-icon.svg" alt="Star" />
+								<img src="assets/show-icon.svg" alt="Show" />
+								<img src="assets/share-icon.svg" alt="Share" />
+							</div>
+						</div>
+
+						<div class="project-card">
+							<h2>Less Cool Project</h2>
+							<p>
+								Duis aute irure dolor in reprehenderit in voluptate velit esse
+								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+								cupidatat non proident, sunt in culpa qui officia deserunt
+								mollit anim id est laborum.
+							</p>
+							<div class="quick-controls">
+								<img src="assets/star-icon.svg" alt="Star" />
+								<img src="assets/show-icon.svg" alt="Show" />
+								<img src="assets/share-icon.svg" alt="Share" />
+							</div>
+						</div>
+
+						<div class="project-card">
+							<h2>Impossible App</h2>
+							<p>
+								Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+								accusantium doloremque laudantium, totam rem aperiam.
+							</p>
+							<div class="quick-controls">
+								<img src="assets/star-icon.svg" alt="Star" />
+								<img src="assets/show-icon.svg" alt="Show" />
+								<img src="assets/share-icon.svg" alt="Share" />
+							</div>
+						</div>
+
+						<div class="project-card">
+							<h2>Easy Peasy App</h2>
+							<p>
+								Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+								aut fugit, sed quia consequuntur magni dolores eos qui ratione
+								voluptatem sequi nesciunt.
+							</p>
+							<div class="quick-controls">
+								<img src="assets/star-icon.svg" alt="Star" />
+								<img src="assets/show-icon.svg" alt="Show" />
+								<img src="assets/share-icon.svg" alt="Share" />
+							</div>
+						</div>
+
+						<div class="project-card">
+							<h2>Ad Blocker</h2>
+							<p>
+								Excepteur sint occaecat cupidatat non proident, sunt in culpa
+								qui officia deserunt mollit anim id est laborum.
+							</p>
+							<div class="quick-controls">
+								<img src="assets/star-icon.svg" alt="Star" />
+								<img src="assets/show-icon.svg" alt="Show" />
+								<img src="assets/share-icon.svg" alt="Share" />
+							</div>
+						</div>
+
+						<div class="project-card">
+							<h2>Money Maker</h2>
+							<p>
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui
+								blanditiis praesentium voluptatum deleniti atque corrupti quos
+								dolores et quas molestias excepturi sint occaecati cupiditate
+								non provident.
+							</p>
+							<div class="quick-controls">
+								<img src="assets/star-icon.svg" alt="Star" />
+								<img src="assets/show-icon.svg" alt="Show" />
+								<img src="assets/share-icon.svg" alt="Share" />
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="announcement-section">
+					<h1>Announcement</h1>
+					<div class="announcement-box">
+						<h3>Site Maintenance</h3>
+						<p>
+							At vero eos et accusamus et iusto odio dignissimos ducimus qui
+							blanditiis praesentium voluptatum deleniti atque corrupti quos
+							dolores et quas molestias excepturi sint occaecati cupiditate non
+							provident.
+						</p>
+
+						<hr />
+
+						<h3>Community Share Day</h3>
+						<p>
+							Et harum quidem rerum facilis est et expedita distinctio. Nam
+							libero tempore, cum soluta nobis est eligendi optio cumque nihil
+							impedit quo minus id quod maxime placeat facere possimus.
+						</p>
+
+						<hr />
+
+						<h3>Updated Privacy Policy</h3>
+						<p>
+							Temporibus autem quibusdam et aut officiis debitis aut rerum
+							necessitatibus saepe eveniet ut et voluptates repudiandae sint et
+							molestiae non recusandae. Itaque earum rerum hic tenetur a
+							sapiente delectus, ut aut reiciendis voluptatibus.
+						</p>
+					</div>
+				</div>
+
+				<div class="trending-section">
+					<h1>Trending</h1>
+					<div class="trending-box">
+						<div class="trending-list">
+							<img src="assets/chicken-avatar.png" alt="Chicken" />
+							<p>@chimkenCurry</p>
+							<p>World Peace Builder</p>
+						</div>
+
+						<div class="trending-list">
+							<img src="assets/koala-avatar.png" alt="Koala" />
+							<p>@vaanshi</p>
+							<p>Super Cool Project</p>
+						</div>
+
+						<div class="trending-list">
+							<img src="assets/panda-avatar.png" alt="Panda" />
+							<p>@pandaCoco</p>
+							<p>Life Changing App</p>
+						</div>
+
+						<div class="trending-list">
+							<img src="assets/cat-avatar.png" alt="Cat" />
+							<p>@explodingCat</p>
+							<p>No Traffic Maker</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
