Imported Open Sans font from Google Fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<title>Admin Dashboard</title>
 		<link rel="stylesheet" href="css-reset.css" />
 		<link rel="stylesheet" href="style.css" />
+
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+		</style>
 	</head>
 	<body>
 		<div class="container">
