Renamed and changed the header into a class banner and put it inside the navbar

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
 						<p>Ivan Russel</p>
 					</div>
 				</div>
+
+				<div class="banner">
+					<div class="greeting-container">
+						<img src="assets/koala-avatar.png" alt="Koala" />
+						<p>Hi there,</p>
+						<h1>Ivan Russel (@vaanshi)</h1>
+					</div>
+
+					<div class="action-button-container">
+						<button id="new-btn">New</button>
+						<button id="upload-btn">Upload</button>
+						<button id="share-btn">Share</button>
+					</div>
+				</div>
 			</nav>
-
-			<header>
-				<div class="greeting-container">
-					<img src="assets/koala-avatar.png" alt="Koala" />
-					<p>Hi there,</p>
-					<h1>Ivan Russel (@vaanshi)</h1>
-				</div>
-
-				<div class="action-button-container">
-					<button id="new-btn">New</button>
-					<button id="upload-btn">Upload</button>
-					<button id="share-btn">Share</button>
-				</div>
-			</header>
 
 			<div class="sidebar">
 				<div class="title-container">
