Puts search icon and search bar on a container

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 	<body>
 		<div class="container">
 			<nav class="navbar">
-				<img src="assets/search-icon.svg" alt="Search Icon" />
-				<input
-					type="text"
-					name="search-bar"
-					id="search-bar"
-					placeholder="Search"
-				/>
+				<div class="search-bar-container">
+					<img src="assets/search-icon.svg" alt="Search Icon" />
+					<input
+						type="text"
+						name="search-bar"
+						id="search-bar"
+						placeholder="Search"
+					/>
+				</div>
 
 				<div class="user-nav">
 					<img src="assets/notif-icon.svg" alt="Notification" />
