Added 'filter-white' class for the svg elements on the sidebar icons for coloring

--- a/index.html
+++ b/index.html
@@ -47,49 +47,85 @@
 
 			<div class="sidebar">
 				<div class="title-container">
-					<img src="assets/dashboard-logo.svg" alt="Logo" />
+					<img
+						src="assets/dashboard-logo.svg"
+						alt="Logo"
+						class="filter-white"
+					/>
 					<h1>Dashboard</h1>
 				</div>
 
 				<div class="links-container">
 					<ul>
 						<li>
-							<img src="assets/home-icon.svg" alt="Home" />
+							<img src="assets/home-icon.svg" alt="Home" class="filter-white" />
 							<p>Home</p>
 						</li>
 						<li>
-							<img src="assets/profile-icon.svg" alt="Profile" />
+							<img
+								src="assets/profile-icon.svg"
+								alt="Profile"
+								class="filter-white"
+							/>
 							<p>Profile</p>
 						</li>
 						<li>
-							<img src="assets/message-icon.svg" alt="Messages" />
+							<img
+								src="assets/message-icon.svg"
+								alt="Messages"
+								class="filter-white"
+							/>
 							<p>Messages</p>
 						</li>
 						<li>
-							<img src="assets/history-icon.svg" alt="History" />
+							<img
+								src="assets/history-icon.svg"
+								alt="History"
+								class="filter-white"
+							/>
 							<p>History</p>
 						</li>
 						<li>
-							<img src="assets/tasks-icon.svg" alt="Tasks" />
+							<img
+								src="assets/tasks-icon.svg"
+								alt="Tasks"
+								class="filter-white"
+							/>
 							<p>Tasks</p>
 						</li>
 						<li>
-							<img src="assets/community-logo.svg" alt="Communities" />
+							<img
+								src="assets/community-logo.svg"
+								alt="Communities"
+								class="filter-white"
+							/>
 							<p>Communities</p>
 						</li>
 					</ul>
 
 					<ul>
 						<li>
-							<img src="assets/settings-icon.svg" alt="Settings" />
+							<img
+								src="assets/settings-icon.svg"
+								alt="Settings"
+								class="filter-white"
+							/>
 							<p>Settings</p>
 						</li>
 						<li>
-							<img src="assets/support-logo.svg" alt="Support" />
+							<img
+								src="assets/support-logo.svg"
+								alt="Support"
+								class="filter-white"
+							/>
 							<p>Support</p>
 						</li>
 						<li>
-							<img src="assets/privacy-logo.svg" alt="Privacy" />
+							<img
+								src="assets/privacy-logo.svg"
+								alt="Privacy"
+								class="filter-white"
+							/>
 							<p>Privacy</p>
 						</li>
 					</ul>
