Removed some of the place holder text on announcement

--- a/index.html
+++ b/index.html
@@ -227,9 +227,7 @@
 						<h3>Site Maintenance</h3>
 						<p>
 							At vero eos et accusamus et iusto odio dignissimos ducimus qui
-							blanditiis praesentium voluptatum deleniti atque corrupti quos
-							dolores et quas molestias excepturi sint occaecati cupiditate non
-							provident.
+							blanditiis praesentium voluptatum deleniti.
 						</p>
 
 						<hr />
@@ -237,8 +235,7 @@
 						<h3>Community Share Day</h3>
 						<p>
 							Et harum quidem rerum facilis est et expedita distinctio. Nam
-							libero tempore, cum soluta nobis est eligendi optio cumque nihil
-							impedit quo minus id quod maxime placeat facere possimus.
+							libero tempore, cum soluta nobis est.
 						</p>
 
 						<hr />
@@ -246,9 +243,7 @@
 						<h3>Updated Privacy Policy</h3>
 						<p>
 							Temporibus autem quibusdam et aut officiis debitis aut rerum
-							necessitatibus saepe eveniet ut et voluptates repudiandae sint et
-							molestiae non recusandae. Itaque earum rerum hic tenetur a
-							sapiente delectus, ut aut reiciendis voluptatibus.
+							necessitatibus saepe eveniet ut et voluptates.
 						</p>
 					</div>
 				</div>
