--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 						<h3>Updated Privacy Policy</h3>
 						<p>
 							Temporibus autem quibusdam et aut officiis debitis aut rerum
-							necessitatibus saepe eveniet ut et voluptates.
+							necessitatibus saepe.
 						</p>
 					</div>
 				</div>
